syntax = "proto3";

package req;

message HeaderRequest {
    int32 contentLength = 1;
    RequestType requestType = 2;

    enum RequestType {
        CREATE = 0;
        GET = 1;
        READ = 2;
        WRITE = 3;
      }
}

